format test for Home

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
+<head>
+    <link rel="style" href="style.css">
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <div class="header">
+        <h1> Gage Hinshaw</h1>
+        <p> Stay awhile.</p>
+    </div>
 </body>
 </html>
