--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta charset="UTF-8">
 <head>
-    <link rel="style" href="style.css">
+    <link rel="stylesheet" href="style.css">
 <body>
     <div class="header">
         <h1> Gage Hinshaw</h1>
