--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <div class="navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
-        <a href="contact.html">Contact Me</a>
+        <a href="contact.html" class="right">Contact Me</a>
       </div>
 </body>
 </html>
