--- a/contact.html
+++ b/contact.html
@@ -14,5 +14,15 @@
         <a href="about.html">About Me</a>
         <a href="contact.html" class="right">Contact Me</a>
       </div>
+      <div class="contact">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="fullname" placeholder="Your Full Name">
+      
+        <label for="email">Email</label>
+        <input type="text" id="email" name="mail" placeholder="Your Email">
+
+        <label for="message">Message</label>
+        <textarea id="message" name="msg" placeholder="Send me a message!" style="height:200px"></textarea>
+    </div>
 </body>
 </html>
