--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,17 @@
         <h1> Gage Hinshaw</h1>
         <p> Stay awhile.</p>
     </div>
+    <div>
+
+    </div>
     <div class="navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="contact.html" class="right">Contact Me</a>
+      </div>
+      <div>
+        <a href="mailto:marsagainsthost@gmail.com">Send me an email!</a>
+        <a href="https://www.linkedin.com/in/gage-hinshaw-ba880117b/"> LinkedIn</a>
       </div>
       <div class="contact">
         <label for="name">Name</label>
