--- a/contact.html
+++ b/contact.html
@@ -18,9 +18,13 @@
         <a href="contact.html" class="right">Contact Me</a>
       </div>
       <div>
-        <a href="mailto:marsagainsthost@gmail.com">Send me an email!</a>
+        <a href="mailto:marsagainsthost@gmail.com">
+            <img src="gmail.png" alt="Gmail Link" style="width:42px; height:42px;">
+        </a>
         <br>
-        <a href="https://www.linkedin.com/in/gage-hinshaw-ba880117b/"> LinkedIn</a>
+        <a href="https://www.linkedin.com/in/gage-hinshaw-ba880117b/">
+            <img src="linkedin.png" alt="LinkedIn Link" style="width:42px; height:42px;">
+        </a>
       </div>
       <div class="contact">
         <label for="name">Name</label>
