centering image links

--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,13 @@
         <a href="about.html">About Me</a>
         <a href="contact.html" class="right">Contact Me</a>
       </div>
-      <div>
+      <div style="contactlinks">
         <a href="mailto:marsagainsthost@gmail.com">
-            <img src="gmail.png" alt="Gmail Link" style="width:42px; height:42px;">
+            <img src="gmail.png" alt="Gmail Link">
         </a>
         <br>
         <a href="https://www.linkedin.com/in/gage-hinshaw-ba880117b/">
-            <img src="linkedin.png" alt="LinkedIn Link" style="width:42px; height:42px;">
+            <img src="linkedin.png" alt="LinkedIn Link">
         </a>
       </div>
       <div class="contact">
