--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <a href="about.html">About Me</a>
         <a href="contact.html" class="right">Contact Me</a>
       </div>
-      <div style="contactlinks">
+      <div class="contactlinks">
         <a href="mailto:marsagainsthost@gmail.com">
             <img src="gmail.png" alt="Gmail Link">
         </a>
