--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
-        <a href="contact.html" class="right">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
       </div>
       <div class="contactlinks">
         <a href="mailto:marsagainsthost@gmail.com">
