--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <div class="navigation">
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
-        <a href="contact.html" class="right">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
       </div>
 </body>
 </html>
