Simplified class name for centering imgages, added image to header

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <div class="header">
         <h1> Gage Hinshaw</h1>
         <p> Stay awhile.</p>
+        <img src="profpic.jpg" alt="Gage H" class="centerimg">
     </div>
     <div>
 
@@ -17,7 +18,7 @@
         <a href="about.html">About Me</a>
         <a href="contact.html">Contact Me</a>
       </div>
-      <div class="contactlinks">
+      <div class="centerimg">
         <a href="mailto:marsagainsthost@gmail.com">
             <img src="gmail.png" alt="Gmail Link">
         </a>
