--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="header">
         <h1> Gage Hinshaw</h1>
         <p> Stay awhile.</p>
+        <img src="profpic.jpg" alt="Gage H" class="centerimg">
     </div>
     <div class="navigation">
         <a href="index.html">Home</a>
