--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <div class="header">
         <h1> Gage Hinshaw</h1>
         <p> Stay awhile.</p>
-        <img src="profpic.jpg" alt="Gage H" class="centerimg">
+        <img src="profpic.jpg" alt="Gage H" class="centerimg" width="250" height="250">
     </div>
     <div>
 
