--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="contact.html">Contact Me</a>
-      </div>
+    </div>
+    <div>
+        <h1> CS 170 Projects</h1>
+        <h2> HW1 or "Best Movies"</h2>
+    </div>
 </body>
 </html>
