--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </div>
     <div>
         <h1> CS 170 Projects</h1>
-        <h2> HW1 or "Best Movies"</h2>
+        <h2> - HW1 or "Best Movies"</h2>
+        <h2> - HW2 or "Party"</h2>
+        <h2> - HW3 or "Online Resume"</h2>
     </div>
 </body>
 </html>
