--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <h2> - HW3 or "Online Resume"</h2>
         <p> HW3 was a webpage assignment focused on creating a online resume.</p>
         <img id="img3" src="">
+        <br>
         <img id="img4" src="">
         <button type="button" onclick="hw3()" id="btn3">
             Show Image
@@ -56,8 +57,8 @@
             function hw3() {
                 let image = document.getElementById("img3");
                 image.src = "hw3-1.png"
-                let image = document.getElementById("img4");
-                image.src = "hw3-2.png"
+                let image2 = document.getElementById("img4");
+                image2.src = "hw3-2.png"
                 document.getElementById("btn2")
                     .style.display = "none";
             }
