--- a/about.html
+++ b/about.html
@@ -14,6 +14,18 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Me</a>
         <a href="contact.html">Contact Me</a>
-      </div>
+    </div>
+    <div>
+        <h1 class="header"> Hi, I'm Gage.</h1>
+        <p> I am a full-time mill operator in the aluminum industry. I am working on my second Bachelor's degree, this time in Mechanical Engineering. My hobbies include home electronics, carpentry, and programming. I have a wide skillset including:</p>
+        <list>
+            <ul>Carpentry</ul>
+            <ul>Amateur Wiring</ul>
+            <ul>Programming (C, Java, Python)</ul>
+            <ul>Forklift Certified</ul>
+            <ul>Customer Service</ul>
+            <ul>Fire Fighting and Rescue</ul>
+        </list>
+    </div>
 </body>
 </html>
