--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <a href="contact.html">Contact Me</a>
     </div>
     <div>
-        <h1 class="header"> Hi, I'm Gage.</h1>
+        <h1> Hi, I'm Gage.</h1>
         <p> I am a full-time mill operator in the aluminum industry. I am working on my second Bachelor's degree, this time in Mechanical Engineering. My hobbies include home electronics, carpentry, and programming. I have a wide skillset including:</p>
         <list>
             <ul>Carpentry</ul>
