--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <div class="header">
         <h1> Gage Hinshaw</h1>
         <p> Stay awhile.</p>
-        <img src="profpic.jpg" alt="Gage H" class="centerimg" width="200" height="auto">
+        <img src="img/profpic.jpg" alt="Gage H" class="centerimg" width="200" height="auto">
     </div>
     <div>
 
@@ -20,11 +20,11 @@
       </div>
       <div class="centerimg">
         <a href="mailto:marsagainsthost@gmail.com">
-            <img src="gmail.png" alt="Gmail Link">
+            <img src="img/gmail.png" alt="Gmail Link">
         </a>
         <br>
         <a href="https://www.linkedin.com/in/gage-hinshaw-ba880117b/">
-            <img src="linkedin.png" alt="LinkedIn Link">
+            <img src="img/linkedin.png" alt="LinkedIn Link">
         </a>
       </div>
       <div class="contact">
