--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="header">
         <h1> Gage Hinshaw</h1>
         <p> Stay awhile.</p>
-        <img src="profpic.jpg" alt="Gage H" class="centerimg" width="200" height="auto">
+        <img src="img/profpic.jpg" alt="Gage H" class="centerimg" width="200" height="auto">
     </div>
     <div class="navigation">
         <a href="index.html">Home</a>
@@ -26,7 +26,7 @@
         <script>
             function hw1() {
                 let image = document.getElementById("img1");
-                image.src = "HW1.png"
+                image.src = "img/HW1.png"
                 document.getElementById("btn1")
                     .style.display = "none";
             }
@@ -40,7 +40,7 @@
         <script>
             function hw2() {
                 let image = document.getElementById("img2");
-                image.src = "HW2.png"
+                image.src = "img/HW2.png"
                 document.getElementById("btn2")
                     .style.display = "none";
             }
@@ -56,9 +56,9 @@
         <script>
             function hw3() {
                 let image = document.getElementById("img3");
-                image.src = "hw3-1.png"
+                image.src = "img/hw3-1.png"
                 let image2 = document.getElementById("img4");
-                image2.src = "hw3-2.png"
+                image2.src = "img/hw3-2.png"
                 document.getElementById("btn3")
                     .style.display = "none";
             }
